--- a/API_Documentation.ipynb
+++ b/API_Documentation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM59Q5Ajj/WTycN7wWGTEeN",
+      "authorship_tag": "ABX9TyOw4wGXdYwn1VeAaj0gPJBy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -413,6 +413,9 @@
         "      temp_file.write(diagram_content)\n",
         "      temp_file_path = temp_file.name\n",
         "\n",
+        "  with open('/content/sequence_diagram.puml', 'w', encoding='utf-8') as f:\n",
+        "            f.write(diagram_content)\n",
+        "\n",
         "  file_path='/content/sequence_diagram.puml'\n",
         "  plantuml.processes_file(temp_file_path, outfile=file_path)\n",
         "\n",
@@ -426,7 +429,7 @@
       "metadata": {
         "id": "Ri4yn7n0UBm6"
       },
-      "execution_count": 306,
+      "execution_count": 310,
       "outputs": []
     },
     {
@@ -523,7 +526,7 @@
       "metadata": {
         "id": "ufaFo4TITnCa"
       },
-      "execution_count": 307,
+      "execution_count": 311,
       "outputs": []
     },
     {
@@ -594,9 +597,9 @@
           "height": 1000
         },
         "id": "-aayLleyZLot",
-        "outputId": "23a06649-c0ea-44c7-c8ed-02f5c41ffec9"
+        "outputId": "1ea76415-3533-41ad-d270-4d53a029c5e0"
       },
-      "execution_count": 308,
+      "execution_count": 312,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,68 +607,60 @@
           "text": [
             "Okay, I've analyzed the code in the GitHub repository \"https://github.com/mikeknep/SOLID\".\n",
             "\n",
-            "**Business Outcome:** This repository provides a practical demonstration of SOLID principles in C#, aiming to create more maintainable, scalable, and testable software. By adhering to these principles, the project reduces development costs in the long run by making the codebase easier to understand, modify, and extend as business requirements evolve.\n",
+            "**Business Outcome:**\n",
+            "\n",
+            "The repository demonstrates the SOLID principles of object-oriented design, aiming to create more maintainable, flexible, and robust software. This translates to reduced development costs in the long run due to easier code modification, fewer bugs, and improved collaboration among developers.\n",
             "```plantuml\n",
             "@startuml\n",
-            "actor User\n",
-            "participant OrderUI\n",
+            "participant User\n",
+            "participant OrderController\n",
             "participant OrderService\n",
+            "participant OrderRepository\n",
             "participant PaymentService\n",
             "participant NotificationService\n",
-            "participant OrderRepository\n",
-            "database Database\n",
             "\n",
-            "User -> OrderUI : Initiates order placement\n",
-            "activate OrderUI\n",
-            "OrderUI -> OrderService : requestPlaceOrder(orderData)\n",
+            "activate User\n",
+            "\n",
+            "User -> OrderController: createOrder(orderData)\n",
+            "activate OrderController\n",
+            "\n",
+            "OrderController -> OrderService: createOrder(orderData)\n",
             "activate OrderService\n",
             "\n",
-            "OrderService -> OrderService : validateOrder(orderData)\n",
-            "alt Validation fails\n",
-            "    OrderService -->> OrderUI : Display error message\n",
-            "    deactivate OrderService\n",
-            "    OrderUI -->> User : Displays error\n",
-            "    deactivate OrderUI\n",
-            "    stop\n",
-            "end\n",
-            "\n",
-            "OrderService -> PaymentService : processPayment(paymentDetails)\n",
-            "activate PaymentService\n",
-            "PaymentService -> PaymentService : validatePayment(paymentDetails)\n",
-            "alt Payment validation fails\n",
-            "    PaymentService -->> OrderService : PaymentFailedException\n",
-            "    deactivate PaymentService\n",
-            "    OrderService -->> OrderUI : Display payment error\n",
-            "    deactivate OrderService\n",
-            "    OrderUI -->> User : Display payment error\n",
-            "    deactivate OrderUI\n",
-            "    stop\n",
-            "end\n",
-            "\n",
-            "PaymentService -> PaymentService : chargeCreditCard(paymentDetails)\n",
-            "PaymentService -->> OrderService : PaymentConfirmation\n",
-            "deactivate PaymentService\n",
-            "\n",
-            "OrderService -> OrderRepository : saveOrder(orderData)\n",
+            "OrderService -> OrderRepository: save(orderData)\n",
             "activate OrderRepository\n",
-            "OrderRepository -> Database : save(orderData)\n",
-            "activate Database\n",
-            "Database -->> OrderRepository : orderId\n",
-            "deactivate Database\n",
-            "OrderRepository -->> OrderService : orderId\n",
+            "OrderRepository --> OrderService: orderId\n",
             "deactivate OrderRepository\n",
             "\n",
-            "OrderService -> NotificationService : sendConfirmation(orderId)\n",
-            "activate NotificationService\n",
-            "NotificationService -> NotificationService : createMessage(orderId)\n",
-            "NotificationService -> NotificationService : sendEmail(message)\n",
-            "deactivate NotificationService\n",
+            "OrderService -> PaymentService: processPayment(orderData.paymentInfo)\n",
+            "activate PaymentService\n",
+            "PaymentService --> OrderService: paymentResult\n",
+            "deactivate PaymentService\n",
             "\n",
-            "OrderService -->> OrderUI : orderConfirmation(orderId)\n",
+            "alt paymentResult == Success\n",
+            "    OrderService -> OrderRepository: updateOrderStatus(orderId, \"PAID\")\n",
+            "    activate OrderRepository\n",
+            "    OrderRepository --> OrderService:\n",
+            "    deactivate OrderRepository\n",
+            "\n",
+            "    OrderService -> NotificationService: sendOrderConfirmation(orderData.customerEmail, orderId)\n",
+            "    activate NotificationService\n",
+            "    NotificationService --> OrderService:\n",
+            "    deactivate NotificationService\n",
+            "\n",
+            "    OrderService --> OrderController: orderConfirmation\n",
+            "else paymentResult == Failure\n",
+            "    OrderService -> OrderRepository: updateOrderStatus(orderId, \"FAILED\")\n",
+            "    activate OrderRepository\n",
+            "    OrderRepository --> OrderService:\n",
+            "    deactivate OrderRepository\n",
+            "    OrderService --> OrderController: paymentFailureMessage\n",
+            "end\n",
+            "\n",
+            "OrderController --> User: orderConfirmation or paymentFailureMessage\n",
             "deactivate OrderService\n",
-            "OrderUI -->> User : Displays order confirmation\n",
-            "deactivate OrderUI\n",
-            "\n",
+            "deactivate OrderController\n",
+            "deactivate User\n",
             "@enduml\n",
             "```\n"
           ]
@@ -684,7 +679,7 @@
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langgraph/pregel/_retry.py\u001b[0m in \u001b[0;36mrun_with_retry\u001b[0;34m(task, retry_policy, configurable)\u001b[0m\n\u001b[1;32m     40\u001b[0m             \u001b[0mtask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrites\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[0;31m# run the task\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mtask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minvoke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mParentCommand\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mns\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCONF\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCONFIG_KEY_CHECKPOINT_NS\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langgraph/_internal/_runnable.py\u001b[0m in \u001b[0;36minvoke\u001b[0;34m(self, input, config, **kwargs)\u001b[0m\n\u001b[1;32m    655\u001b[0m                     \u001b[0;31m# run in context\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    656\u001b[0m                     \u001b[0;32mwith\u001b[0m \u001b[0mset_config_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrun\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcontext\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 657\u001b[0;31m                         \u001b[0minput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minvoke\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    658\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    659\u001b[0m                     \u001b[0minput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstep\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minvoke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langgraph/_internal/_runnable.py\u001b[0m in \u001b[0;36minvoke\u001b[0;34m(self, input, config, **kwargs)\u001b[0m\n\u001b[1;32m    399\u001b[0m                 \u001b[0mrun_manager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_chain_end\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mret\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    400\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 401\u001b[0;31m             \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    402\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecurse\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mret\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRunnable\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    403\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mret\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minvoke\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-3143713377.py\u001b[0m in \u001b[0;36mSequence_Diagram\u001b[0;34m(state)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m   \u001b[0mfile_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/content/sequence_diagram.png'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m   \u001b[0mplantuml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocesses_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_file_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m   \u001b[0;31m# Clean up the temporary file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-3045398422.py\u001b[0m in \u001b[0;36mSequence_Diagram\u001b[0;34m(state)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m   \u001b[0mfile_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'/content/sequence_diagram.puml'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m   \u001b[0mplantuml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocesses_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_file_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m   \u001b[0;31m# Clean up the temporary file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/plantuml.py\u001b[0m in \u001b[0;36mprocesses_file\u001b[0;34m(self, filename, outfile, errorfile, directory)\u001b[0m\n\u001b[1;32m    197\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    198\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 199\u001b[0;31m             \u001b[0mcontent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocesses\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    200\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mPlantUMLHTTPError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m             \u001b[0merr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrorfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/plantuml.py\u001b[0m in \u001b[0;36mprocesses\u001b[0;34m(self, plantuml_text)\u001b[0m\n\u001b[1;32m    171\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mPlantUMLConnectionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 173\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mPlantUMLHTTPError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    174\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mcontent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    175\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/plantuml.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, response, content, *args, **kwdargs)\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m             self.message = \"%d: %s\" % (\n\u001b[1;32m     58\u001b[0m                 self.response.status, self.response.reason)\n",
